--- a/Zeros/story.html
+++ b/Zeros/story.html
@@ -4,6 +4,9 @@
 	<title>Zeros</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 	<link rel="stylesheet" href="style.css"/>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="jquery.mousewheel.min.js.pagespeed.jm.jfOY7xKcOw.js"></script>
+	<script>$(document).ready(function(){$('html, body, *').mousewheel(function(e,delta){this.scrollLeft-=(delta*40);e.preventDefault();});});</script>
   </head>
   <body>
 	<div class="title">ZEROS<br><span id="fade">(scroll to start)</span></div>
@@ -307,13 +310,5 @@
 	<p>&nbsp;&nbsp;&nbsp; Inside the room Brian starts the countdown.</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;&nbsp;&nbsp; 10&hellip; 9&hellip; 8&hellip; 7&hellip; 6&hellip; 5&hellip; 4&hellip; 3&hellip; 2&hellip; 1&hellip;</p>
-	<scrpit>
-$(function() {
-    $("html, body, *").mousewheel(function(event, delta) {
-        this.scrollLeft -= (delta * 50);
-        event.preventDefault();
-    });
-});
-	</scrpit>
    </body>
 </html>
