--- a/Zeros/story.html
+++ b/Zeros/story.html
@@ -4,6 +4,9 @@
 	<title>Zeros</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 	<link rel="stylesheet" href="style.css"/>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="http://www.designedbyaturtle.co.uk/demos/horizontal-scrolling/jquery.mousewheel.min.js.pagespeed.jm.jfOY7xKcOw.js"></script>
+	<script>$(document).ready(function(){$('html, body, *').mousewheel(function(e,delta){this.scrollLeft-=(delta*40);e.preventDefault();});});</script>
   <body>
 	<div class="title">ZEROS<br><span id="fade">(scroll to start)</span></div>
 	<p>&nbsp;&nbsp;&nbsp; I&rsquo;m not a scientist. I&rsquo;m an ethicist. </p>
