--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 		      "I'm too old for this crap",
 		      "I only read my own tweets",
 		      "I hate how critical I am of myself",
-		      "Case's Farm Fresh <be>Delicata Squash <br>Product of USA <be>PLU 4763 <be>Bill Case Farms 🞄 Albany, OR 97321",
+		      "Case's Farm Fresh <br>Delicata Squash <br> Product of USA <br> PLU 4763 <be>Bill Case Farms 🞄 Albany, OR 97321",
 		      "my mom made me throw out all my rope before going to college",
 		      "🎵it's beginning to look a lot like homicide🎵",
 		      "hey @NutellaUSA you're the reason my children won't eat my waffles for breakfast anymore my kid gerb passed out in kindergarten due to mal nutrition and valerie has stopped taking to me!",
@@ -527,6 +527,88 @@
 		      "Don't be starting things you",
 		      "Can we have a national going back into the closet I take it back day?",
 		      "Bring those mittens next time you come out",
+		      "I can't spell anitheng",
+		      "#WhenYouMissTheElevatorBecauseYouWereTooBusyLaughingAtYourOwnMeme",
+		      "I can't believe you've done this",
+		      "I'm not like other girls",
+		      "Getting your legs waxed is a rip-off",
+		      "Well, We made it this far",
+		      "#BirdLeaf",
+		      "#DogNumberTwo",
+		      "Don't criticize people until you've walked a mile in their shoes That way when you do you'll be a mile away and they won't have shoes",
+		      "&quot;Hi! Our group name is ' ' and for our project we are presenting a baby&quot;",
+		      "What's green and rhythms with &quot;eggs&quot;?",
+		      "bone ape tit",
+		      "guys i'm famous",
+		      "Why are you like this?",
+		      "Societal dysphoria",
+		      "It's not really a knee slapper if you ask me it might be slightly hilarious but I even have trouble seeing that",
+		      "Why am I following the prime minister of India? I did not do this.",
+		      "I think most of my tweets are just me responding to imaginary tweets.",
+		      "I don't think it's about that...",
+		      "Is it okay if I fall madly in love with you? like Is that something that would be okay with you?",
+		      "you're a vegetable",
+		      "remember when you didn't think that?",
+		      "Don't tell me how to live my life unless you're going to tell me to do something I want to",
+		      "You're all invited to my sleepover",
+		      "&quot;I haven't been myself these past couple weeks&quot; Oh gee wiz bud I got news some dorks been walking around in your body the past two weeks.",
+		      "◞",
+		      "maybe if we overthink it hard enough it'll come full circle and we'll have thought about it just the right amount",
+		      "If you can't handle me at my best and you don't deserve me at my worst",
+		      "how disappointed I was to discover that we are no longer on speaking terms",
+		      "As someone who has eaten bad food before I can say with experience that this food is not very good",
+		      "There's more than one answer doesn't mean there ain't more than one wrong answer too",
+		      "–myself",
+		      "i'm going outside",
+		      "Did you know that you can lie on the internet?",
+		      "You're so beautiful You're so beautiful You're so beautiful You're so beautiful",
+		      "I buy sliced apples 'cause I wanna be considerate to those people who have to carefully glue all those pieces together to make a full one.",
+		      "It's the people who actually do things that get things done",
+		      "I guess I'm dying at 39 because I'm having a midlife crisis right now",
+		      "It takes a lot of work to be a dysfunctional mess",
+		      "One dishonest noodle boi",
+		      "I just want everyone to like me and also I hate everyone and also I'm unwilling to change",
+		      "&quot;I never think of anything original&quot; –some guy who's not me",
+		      "Just because I don't doesn't mean I can't",
+		      "Now that you're hot, do you want to hang out?",
+		      "When does a dad joke become a dad joke? When it becomes fully grown.",
+		      "I feel like that comment's coming completely out of nowhere, and I really don't know what any of that means without context.",
+		      "stonk industrialist",
+		      "When someone says &quot;I could pull off that outfit&quot; I think, yeah but I like wearing clothes & I don't really want you to pull them off now.",
+		      "i wanna be a movie star",
+		      "that's high art",
+		      "I think my aesthetic is rotisserie chicken",
+		      "If you were to take that— and put it in the New Yorker– it would be a New Yorker joke-",
+		      "Retro futurism",
+		      "I have a wife and children",
+		      "I wish food didn't cost any money",
+		      "Time and Space died yesterday.",
+		      "It's good if you like that kind of thing",
+		      "If I had a Hermione time turner I'd use it to procrastinate & then I'd just keep reliving the same two hours before it's due & get old & die",
+		      "Had anyone ever told you that you look shorter on TV?",
+		      "Calling something anti intellectual is anti intellectual.",
+		      "My life is like one of those cheesy cross over episodes",
+		      "wow",
+		      "It must have been hard for our ancestors who had to carry tiny books around in their pocket to whip out in awkward social situations.",
+		      "I'm sorry, but you are not a real gatekeeper unless you gate people in real life too.",
+		      "If you DON'T crash civil engineering conventions, that you are absolutely confused about what it means to be a pescetarian.",
+		      "I want you to know that I'm only like this on purpose if you like me",
+		      "I have an idea for a website that's like facebook, but not terrible.",
+		      "Everything happens for a reason, just sometimes the reason is kinda crap.",
+		      "You know when people tweet about them selfs in the third person and it becomes hard to tell if they are talking about them selfs or not?",
+		      "Dear God, Please make me beautiful so I can do a YouTube.",
+		      "I'm bad at haikus <br>I think for some reason that 18 syllables go in the middle line <br>Also I can't spell",
+		      "guys, follow me on instagram <a href='https://www.instagram.com/ewonrael/'>instagram.com/ewonrael/</a>",
+		      "Don't look now but there's someone behind you",
+		      "It doesn't work like that It never worked like that It doesn't work that way That's not how it works Nope It never will work that way",
+		      "I have an admission to make- Contrary to what you may think, I don't actually know what I'm doing.",
+		      "...they tucket",
+		      "I'm doing this long form performance art piece where I'm an arts student",
+		      "#Hashtag",
+		      "If I had a dollar for every time I wanted a dollar, I'd start wanting money in single dollar increments.",
+		      "If I had a band we would be called &quot;Disarming Authenticity&quot; and our music would be mediocre at best.",
+		      "Social media feels like speaking vainly into an indifferent void.",
+		      "Full transparency: I'm deleting old tweets."
 	      ];
 		var i = parseInt(Math.random() * tweets.length);
         	document.getElementById("tweet").innerHTML = tweets[i];
