--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		      "that is the exact opposite of what you're supposed to do in a knife fight",
 		      "are there any therapists that will help me figure out what my problem is with John Cage?",
 		      "half fallen: the diagonal people",
-		      "me: maybe I'll have kids <br>my kid gerb: I thought you didn't want kids <br>me: yeah but I need someone with small enough hands to reach the bottom of this jar of coconut oil",
+		      "me: maybe I'll have kids <br><br>my kid gerb: I thought you didn't want kids <br><br>me: yeah but I need someone with small enough hands to reach the bottom of this jar of coconut oil",
 		      "the hipsters are mad",
 		      "I got a master's degree in the art of counterfeiting",
 		      "if I put mint and chili pepper in the same thing do they cancel each other out?",
@@ -186,11 +186,11 @@
 		      "check out my mixtape",
 		      "tryin' to make this about me",
 		      "they should make non vegan alternatives to vegan foods, like rice made of milk or something I don't know I'm tired and I'm trying to think of something funny because I just realized I haven't tweeted all the day and I feel a weird obligation to do so",
-		      "me: someone who's good at computers please help me <br>someone who's good at computers: what's up? <br>me: I feel like I push people away from me, not because I'm afraid of them learning my true self but because I'm afraid I'll eventually grow bored of them",
+		      "me: someone who's good at computers please help me <br><br>someone who's good at computers: what's up? <br><br>me: I feel like I push people away from me, not because I'm afraid of them learning my true self but because I'm afraid I'll eventually grow bored of them",
 		      "I need there to be bluegrass cover of literally every song",
 		      "I like to spy on bird watchers",
 		      "sometimes I pretend to be bad at things so that when I'm actually bad things people might think it's a joke",
-		      "him: &quot;I'm into bad boys&quot; <br>me: *commits voter fraud*",
+		      "him: &quot;I'm into bad boys&quot; <br><br>me: *commits voter fraud*",
 		      "I'm trying to get into shape but I ain't never told you which shape",
 		      "thanks",
 		      "I am so covetous. I need two googly eyes for a Sunday school project and there isn’t a googly eye in all of Mt Shasta.",
@@ -254,7 +254,7 @@
 		      "someone should do a scientific study that tracks how giving random people large quantities of money impacts their life style and choose me as a test subject",
 		      "instead of having a friend that always buys me food I feel like I am the friend that always buys other people food and I really can't afford this lifestyle",
 		      "easier done than said",
-		      "me: help I'm dying <br>my kid gerb: you literally have not drunketh water in the past two days <br>me: tell my kid gerb I liked him but not in a sexual way",
+		      "me: help I'm dying <br><br>my kid gerb: you literally have not drunketh water in the past two days <br><br>me: tell my kid gerb I liked him but not in a sexual way",
 		      "exclusive marine complex",
 		      "anybody else buy a butt load of @Motts applesauce just to discover that it's some wired flavor like grape or something so you hide it in Michelle's backpack while camping so she'll discover it later and know it was you because youre the only two people please send help we're lost",
 		      "putting &quot;not clickbait&quot; in your YouTube video title is like prefacing a statement with &quot;I'm not racist but...&quot;",
@@ -289,7 +289,7 @@
 		      "why do they play Brandenburg concertos when they put you on hold it's like the worst medium a cell phone connection all I can hear is tinny violin and then they interrupt it to tell you about how to use their website like I know how to use the website",
 		      "if we get people to stop making slippery slope arguments what's to keep us from banning all kind of arguments huh?",
 		      "in space, nobody can hear you in space",
-		      "me: but please sir, where's the bathroom? <br>waiter: the bathroom's over there <br>me: thanks a lot, sir... and the sandwich? where's the sandwich? <br>waiter: here it is miss. I understand. you're American and you have no time",
+		      "me: but please sir, where's the bathroom? <br><br>waiter: the bathroom's over there <br><br>me: thanks a lot, sir... and the sandwich? where's the sandwich? <br><br>waiter: here it is miss. I understand. you're American and you have no time",
 		      "It's turkey bacon!?",
 		      "...are you flirting with me?",
 		      "the idea of social constructs is social construct",
@@ -535,7 +535,7 @@
 		      "Well, We made it this far",
 		      "#BirdLeaf",
 		      "#DogNumberTwo",
-		      "Don't criticize people until you've walked a mile in their shoes That way when you do you'll be a mile away and they won't have shoes",
+		      "Don't criticize people until you've walked a mile in their shoes <br>That way when you do you'll be a mile away and they won't have shoes",
 		      "&quot;Hi! Our group name is ' ' and for our project we are presenting a baby&quot;",
 		      "What's green and rhythms with &quot;eggs&quot;?",
 		      "bone ape tit",
