--- a/index.html
+++ b/index.html
@@ -635,20 +635,32 @@
 		<a href="https://www.paypal.me/EwonRael">Give Me Money</a>
 	</p>
 	<p>
+		<a href="https://ewonrael.bandcamp.com/">BandCamp</a>
+	</p>
+	<p>
 		<a href="mailto:EwonRael@yahoo.com">Email Me</a>
 	</p>
 	<p>
 		<a href="https://www.facebook.com/EwonRael">Facebook</a>
 	</p>
+	<p>
+		<a href="https://www.instagram.com/EwonRael/">Instagram</a>
+	</p>
+	<p>
+		<a href="https://www.reddit.com/user/EwonRael/">Reddit</a>
+	</p>
+	<p>
+		<a href="snapchat.html">SnapChat</a>
+	</p>
+	<p>
+		<a href="https://twitter.com/EwonRael">Twitter</a>
+	</p>
 	<br><br>
 	<p>
-		<b>Everything</b>
+		<b>Music</b>
 	</p>
 	<p>
-		<a href="http://activities-index.github.io/">Activities Index</a>
-	</p>
-	<p>
-		<a href="https://ewonrael.bandcamp.com/">BandCamp</a>
+		<a href="https://ewonrael.bandcamp.com/">BandCamp (main site)</a>
 	</p>
 	<p>
 		<a href="https://youtu.be/MBbgw_Qt9Ho">Canon in F# Major for Yodel Instructors</a>
@@ -666,43 +678,51 @@
 		<a href="https://ewonrael.bandcamp.com/album/flii">Flii</a>
 	</p>
 	<p>
-		<a href="http://indestructibletype.com/">indestructible type*</a>
+		<a href="https://ewonrael.bandcamp.com/track/mark-ferrari-bridge-water-city">Mark Ferrari (BRIDGE WATER CITY)</a>
 	</p>
 	<p>
-		<a href="https://www.instagram.com/EwonRael/">Instagram</a>
+		<a href="https://youtu.be/uhVtBPbp_lw">Not Again</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.bandcamp.com/album/simple-sabotage-field-manual">Simple Sabotage Field Manual</a>
+	</p>
+	<p>
+		<a href="https://youtu.be/ohoT8Cdd6mI">Song for my Twitter Followers</a>
+	</p>
+	<br><br>
+	<p>
+		<b>Typography</b>
+	</p>
+	<p>
+		<a href="http://indestructibletype.com/">indestructible type* (main site)</a>
+	</p>
+	<p>
+		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
+	</p>
+	<p>
+		<a href="http://indestructibletype.com/Besley">Besley*</a>
+	</p>
+	<p>
+		<a href="http://indestructibletype.com/Renner">Renner*</a>
+	</p>
+	<br><br>
+	<p>
+		<b>Others</b>
+	</p>
+	<p>
+		<a href="http://activities-index.github.io/">Activities Index</a>
 	</p>
 	<p>
 		<a href="https://youtu.be/6sPEavkcXfk">Interview with John Cage on Silence</a>
 	</p>
 	<p>
-		<a href="https://ewonrael.bandcamp.com/track/mark-ferrari-bridge-water-city">Mark Ferrari (BRIDGE WATER CITY)</a>
-	</p>
-	<p>
 		<a href="https://youtu.be/gCYURbW1o-E">The Naming of Creation</a>
-	</p>
-	<p>
-		<a href="https://youtu.be/uhVtBPbp_lw">Not Again</a>
 	</p>
 	<p>
 		<a href="https://drive.google.com/uc?export=download&id=0B2aVNwXBM6rCSVd6eG5ScndXQzA">Realizations of Incomprehensible Music Movement I</a>
 	</p>
 	<p>
 		<a href="https://drive.google.com/uc?export=download&id=0B2aVNwXBM6rCa3hITnV0eE5RVVU">Realizations of Incomprehensible Music Movement II</a>
-	</p>
-	<p>
-		<a href="https://www.reddit.com/user/EwonRael/">Reddit</a>
-	</p>
-	<p>
-		<a href="https://ewonrael.bandcamp.com/album/simple-sabotage-field-manual">Simple Sabotage Field Manual</a>
-	</p>
-	<p>
-		<a href="snapchat.html">SnapChat</a>
-	</p>
-	<p>
-		<a href="https://youtu.be/ohoT8Cdd6mI">Song for my Twitter Followers</a>
-	</p>
-	<p>
-		<a href="https://twitter.com/EwonRael">Twitter</a>
 	</p>
 	<p>
 		<a href="https://ewonrael.github.io/Zeros/story">Zeros</a>
