--- a/Zeros/story.html
+++ b/Zeros/story.html
@@ -307,10 +307,12 @@
 	<p>&nbsp;&nbsp;&nbsp; Inside the room Brian starts the countdown.</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;&nbsp;&nbsp; 10&hellip; 9&hellip; 8&hellip; 7&hellip; 6&hellip; 5&hellip; 4&hellip; 3&hellip; 2&hellip; 1&hellip;</p>
-<script type="text/javascript">
+<script>
 function scrollWin() {
-    window.scrollBy(100%, 0);
+    window.scrollBy(100, 0);
 }
+</script>
+<script type="text/javascript">
 
 // http://www.dte.web.id/2013/02/event-mouse-wheel.html
 
