--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 		      "tofurkey foturkey",
 		      "I like how Nike tells me to &quot;just do it&quot; and then gives me literally zero instruction on how to do it",
 		      "I'm thinking of starting a club where everyone is a member by default and you have to ask me to not be a member. <br><br>Who's not in?",
-		      "news travels fast by my robots travel faster!",
+		      "news travels fast but my robots travel faster!",
 		      "I'm here <br>my relationship with the identity of queer is complicated to say the least <br>if that makes you uncomfortable then I relate a little 'cause the whole thing makes me uncomfortable too and I guess we can just act like we don't see each other when we're sharing public spaces",
 		      "I keep falling in love with people on tinder who don't swipe right",
 		      "verschmickled",
