--- a/Zeros/story.html
+++ b/Zeros/story.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="style.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <body>
-	<div class="title">ZEROS<br><span id="fade">(scroll to start)<button onclick="scrollWin()">Click me to scroll horizontally!</button></span></div>
+	<div class="title">ZEROS<br><span id="fade">(scroll to start)</span></div>
 	<p>&nbsp;&nbsp;&nbsp; I&rsquo;m not a scientist. I&rsquo;m an ethicist. </p>
 	<p>&nbsp;&nbsp;&nbsp; Science is like war, I think, although I&rsquo;ve never been in a war. We sit around and train, and think, and prepare for what we think we will need to prepare for. We think about what we don&rsquo;t think we will need to prepare for, and we try to prepare for that too. It becomes something of a system-- a routine. If we can quantify the unknown then it isn&rsquo;t so scary. </p>
 	<p>&nbsp;&nbsp;&nbsp; Barbara tells me that when the first nuclear bomb was detonated, people didn&rsquo;t know if it would ever stop. She&rsquo;s an old woman with a history and a Brooklyn accent. We&rsquo;re sitting outside for brunch under a tree, and she&rsquo;s smiling at me matter-of-factly. She explains that a nuclear bomb uses pieces of atoms. When they collide into other atoms, pieces of those atoms fly off and run into more atoms. </p>
@@ -307,11 +307,6 @@
 	<p>&nbsp;&nbsp;&nbsp; Inside the room Brian starts the countdown.</p>
 	<p>&nbsp;</p>
 	<p>&nbsp;&nbsp;&nbsp; 10&hellip; 9&hellip; 8&hellip; 7&hellip; 6&hellip; 5&hellip; 4&hellip; 3&hellip; 2&hellip; 1&hellip;</p>
-<script>
-function scrollWin() {
-    window.scrollBy(100, 0);
-}
-</script>
 <script type="text/javascript">
 
 // http://www.dte.web.id/2013/02/event-mouse-wheel.html
