--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "you know there's no solution to a postmodern crisis",
+		      "there's no proof Hawaii exists",
+		      "we're all just kids",
 		      "check out my new website",
 		      "can't eat money",
 		      "fill in the blank: <br>&quot;okay gang, let's split up and look for ______&quot;",
