--- a/index.html
+++ b/index.html
@@ -713,6 +713,9 @@
 		<a href="http://activities-index.github.io/">Activities Index</a>
 	</p>
 	<p>
+		<a href="https://goo.gl/FaUzwX">The Incomplete Works of Dr. Earl</a>
+	</p>
+	<p>
 		<a href="https://youtu.be/6sPEavkcXfk">Interview with John Cage on Silence</a>
 	</p>
 	<p>
