--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
 	</p>
 	<br><br>
 	<p>
-		<b>Others</b>
+		<b>Multimedia</b>
 	</p>
 	<p>
 		<a href="http://activities-index.github.io/">Activities Index</a>
@@ -720,6 +720,9 @@
 	</p>
 	<p>
 		<a href="https://youtu.be/gCYURbW1o-E">The Naming of Creation</a>
+	</p>
+	<p>
+		<a href="https://youtu.be/lRrZ1-1bD5y">Red Ribbon</a>
 	</p>
 	<p>
 		<a href="https://drive.google.com/uc?export=download&id=0B2aVNwXBM6rCSVd6eG5ScndXQzA">Realizations of Incomprehensible Music Movement I</a>
