--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 		<a href="https://youtu.be/gCYURbW1o-E">The Naming of Creation</a>
 	</p>
 	<p>
-		<a href="https://youtu.be/lRrZ1-1bD5y">Red Ribbon</a>
+		<a href="https://youtu.be/lRrZ1-1bD5Y">Red Ribbon</a>
 	</p>
 	<p>
 		<a href="https://drive.google.com/uc?export=download&id=0B2aVNwXBM6rCSVd6eG5ScndXQzA">Realizations of Incomprehensible Music Movement I</a>
