--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
 	</p>
 	<p>
-		<a href="https://drive.google.com/uc?export=download&id=1YVzBHrQirZ3q_WjB91jhQB1BfW0XNqos">Aesthetic Responses to Repetition in Unfamiliar Music</a>
+		<a href="https://ewonrael.github.io/18-03-29%20Aesthetic%20Response%20to%20Repetition%20in%20Unfamiliar%20Music.mp3">Aesthetic Responses to Repetition in Unfamiliar Music</a>
 	</p>
 	<br><br>
 	<p>
