--- a/fb.html
+++ b/fb.html
@@ -93,5 +93,13 @@
 <div id="status">
 </div>
 
+     <div
+    class="fb-login-button"
+    data-max-rows="1"
+    data-size="large"
+    data-button-type="continue_with"
+    data-use-continue-as="true"
+    ></div>
+  
 </body>
 </html>
