--- a/fb.html
+++ b/fb.html
@@ -20,7 +20,7 @@
     } else {
       // The person is not logged into your app or we are unable to tell.
       document.getElementById('status').innerHTML = 'Please log ' +
-        'into this app.';
+        response.name;
     }
   }
 
