--- a/fb.html
+++ b/fb.html
@@ -12,7 +12,15 @@
   js = d.createElement(s); js.id = id;
   js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0&appId=174215223289024';
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));
+</script>
 <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
+    <p class="switch">book of blank</p>
+<script>
+function myFunction() {
+    list.getElementsByClassName("switch").innerHTML = list.getElementsByClassName("_5h0o").innerHTML;
+}
+</script>
+<button onclick="myFunction()">get name</button>
 </body>
 </html>
