--- a/fb.html
+++ b/fb.html
@@ -18,7 +18,7 @@
     <p class="switch">book of blank</p>
 <script>
 function myFunction() {
-    list.getElementsByClassName("switch").innerHTML = list.getElementsByClassName("_5h0o").innerHTML;
+    document.getElementsByClassName("switch").innerHTML = document.getElementsByClassName("_5h0o").innerHTML;
 }
 </script>
 <button onclick="myFunction()">get name</button>
