--- a/fb.html
+++ b/fb.html
@@ -19,7 +19,7 @@
     <p class="switch">book of blank</p>
 <script>
 function myFunction() {
-    document.getElementsByClassName("switch").innerHTML = document.getElementsByClassName("_5h0o").innerHTML;
+    document.getElementsByClassName("switch").innerHTML[0] = document.getElementsByClassName("_5h0o").innerHTML[0];
 }
 </script>
 <button onclick="myFunction()">get name</button>
