--- a/fb.html
+++ b/fb.html
@@ -15,13 +15,15 @@
 }(document, 'script', 'facebook-jssdk'));
 </script>
 <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
-    <p class="_5h0o">owen</p>
-    <p class="switch">book of blank</p>
+<button onclick="myFunction()">Try it</button>
+
+<p><strong>Note:</strong> The getElementsByClassName() method is not supported in Internet Explorer 8 and earlier versions.</p>
+
 <script>
 function myFunction() {
-    document.getElementsByClassName("switch").innerHTML[0] = document.getElementsByClassName("_5h0o").innerHTML[0];
+    var x = document.getElementsByClassName("example");
+    x[0].innerHTML = "Hello World!";
 }
 </script>
-<button onclick="myFunction()">get name</button>
 </body>
 </html>
