--- a/fb.html
+++ b/fb.html
@@ -15,6 +15,10 @@
 }(document, 'script', 'facebook-jssdk'));
 </script>
 <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
+
+    
+<div class="example">First div element with class="example".</div>
+<div class="example">Second div element with class="example".</div>
 <button onclick="myFunction()">Try it</button>
 
 <p><strong>Note:</strong> The getElementsByClassName() method is not supported in Internet Explorer 8 and earlier versions.</p>
