--- a/fb.html
+++ b/fb.html
@@ -25,7 +25,7 @@
 
 <script>
 function myFunction() {
-    var x = document.getElementsByClassName("example");
+    var x = document.getElementsByClassName("_5h0o");
     x[0].innerHTML = "Hello World!";
 }
 </script>
