--- a/fb.html
+++ b/fb.html
@@ -26,7 +26,7 @@
 <script>
 function myFunction() {
     var x = document.getElementsByClassName("_5h0o");
-    x[0].innerHTML = "Hello World!";
+    document.getElementsByClassName("example") = x[0].innerHTML;
 }
 </script>
 </body>
