--- a/fb.html
+++ b/fb.html
@@ -5,6 +5,7 @@
 </head>
 </head>
 <body>
+<div id="text">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -15,19 +16,8 @@
 }(document, 'script', 'facebook-jssdk'));
 </script>
 <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
-
+</div>
     
-<div class="example">First div element with class="example".</div>
-<div class="example">Second div element with class="example".</div>
-<button onclick="myFunction()">Try it</button>
-
-<p><strong>Note:</strong> The getElementsByClassName() method is not supported in Internet Explorer 8 and earlier versions.</p>
-
-<script>
-function myFunction() {
-    var x = document.getElementsByClassName("_5h0o");
-    document.getElementsByClassName("example") = x[0].innerHTML;
-}
-</script>
+    
 </body>
 </html>
