--- a/fb.html
+++ b/fb.html
@@ -2,10 +2,9 @@
 <html>
 <head>
     <title>name.</title>
-    <link rel="stylesheet" href="fb.css"/>
 </head>
 </head>
-<body>
+<body style="filter: grayscale(100%);">
 <div id="text">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
