--- a/fb.html
+++ b/fb.html
@@ -3,7 +3,7 @@
 <head>
     <title>name.</title>
 </head>
-<body style="filter: grayscale(100%);">
+<body style="-webkit-filter: grayscale(100%); filter: grayscale(100%); filter: invert(100%);">
 <div id="text">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
