--- a/fb.html
+++ b/fb.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>name.</title>
+    <link rel="stylesheet" href="indestructibletype-fonthosting.github.io/fakehelvetica.css" type="text/css" charset="utf-8" />
 </head>
 <body style="-webkit-filter: invert(100%) grayscale(100%); filter: invert(100%) grayscale(100%);">
 <div id="text">
