--- a/fb.html
+++ b/fb.html
@@ -4,7 +4,7 @@
     <title>name.</title>
     <link rel="stylesheet" href="indestructibletype-fonthosting.github.io/fakehelvetica.css" type="text/css" charset="utf-8" />
 </head>
-<body>
+<body style="background-color: #F2F2F2;">
 <div id="text">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
