--- a/fb.html
+++ b/fb.html
@@ -4,7 +4,7 @@
     <title>name.</title>
     <link rel="stylesheet" href="indestructibletype-fonthosting.github.io/fakehelvetica.css" type="text/css" charset="utf-8" />
 </head>
-<body style="background-color: #F2F2F2;">
+<body style="background-color: red;">
 <div id="text">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -15,7 +15,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
-<div style="-webkit-filter: invert(100%) grayscale(100%) brightness(158%); filter: invert(100%) grayscale(100%) brightness(158%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
+<div style="-webkit-filter: invert(100%) grayscale(100%) brightness(190%); filter: invert(100%) grayscale(100%) brightness(190%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
 </div>
 
 </body>
