--- a/fb.html
+++ b/fb.html
@@ -4,7 +4,7 @@
     <title>name.</title>
     <link rel="stylesheet" href="indestructibletype-fonthosting.github.io/fakehelvetica.css" type="text/css" charset="utf-8" />
 </head>
-<body style="background-color: white;">
+<body style="background-color: red;">
 <div id="text">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -16,7 +16,7 @@
 }(document, 'script', 'facebook-jssdk'));
 </script>
 <div style="overflow: hidden;">
-<div style="margin-left: -30px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
+<div style="margin-left: -60px; margin-right: -30px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
 </div>
 </div>
 </body>
