--- a/fb.html
+++ b/fb.html
@@ -15,7 +15,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
-<div style="overflow: hidden; background-color: green;">
+<div style="overflow: hidden; display: inline-block;">
 <div style="margin-left: -60px; margin-right: -90px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
 </div>
 </div>
