--- a/fb.html
+++ b/fb.html
@@ -14,6 +14,6 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
-The Book of<div style="overflow: hidden; display: inline-block;"><div style="margin-left: -137px; margin-right: -53px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></div>
+<div>The Book of</div><div style="overflow: hidden; display: inline-block;"><div style="margin-left: -130px; margin-right: -53px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></div>
 </body>
 </html>
