--- a/fb.html
+++ b/fb.html
@@ -4,7 +4,7 @@
     <title>name.</title>
     <link rel="stylesheet" href="indestructibletype-fonthosting.github.io/fakehelvetica.css" type="text/css" charset="utf-8" />
 </head>
-<body style="background-color: red;">
+<body style="background-color: white;">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
