--- a/fb.html
+++ b/fb.html
@@ -4,7 +4,7 @@
     <title>name.</title>
     <link rel="stylesheet" href="indestructibletype-fonthosting.github.io/fakehelvetica.css" type="text/css" charset="utf-8" />
 </head>
-<body style="background-color: white;">
+<body style="background-color: red;">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -14,6 +14,6 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
-<div style="font-family: Helvetica, Arial, sans-serif; display: inline-block;">The Book of</div><div style="overflow: hidden; display: inline-block;"><div style="margin-left: -132px; margin-right: -53px; margin-top: -10px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></div>
+<div style="font-family: Helvetica, Arial, sans-serif; display: inline-block;">The Book of</div><div style="overflow: hidden; display: inline-block;"><div style="margin-left: -132px; margin-right: -53px; margin-top: -10px; margin-bottom: -25px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></div>
 </body>
 </html>
