--- a/fb.html
+++ b/fb.html
@@ -4,7 +4,8 @@
     <title>name.</title>
     <link rel="stylesheet" href="indestructibletype-fonthosting.github.io/fakehelvetica.css" type="text/css" charset="utf-8" />
 </head>
-<body style="background-color: white;" ahref="http://google.com">
+<body style="background-color: white;">
+<div ahref="http://google.com">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -15,5 +16,6 @@
 }(document, 'script', 'facebook-jssdk'));
 </script>
 <div style="font-family: Helvetica, Arial, sans-serif; display: inline-block;">The Book of</div><div style="overflow: hidden; margin-bottom: -13px; display: inline-block;"><div style="margin-left: -133px; margin-right: -53px; margin-top: -10px; height: 20px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></div>
+</div>
 </body>
 </html>
