--- a/fb.html
+++ b/fb.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="indestructibletype-fonthosting.github.io/fakehelvetica.css" type="text/css" charset="utf-8" />
 </head>
 <body style="background-color: white;">
-<div ahref="http://google.com">
+<div href="http://google.com">
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
