--- a/fb.html
+++ b/fb.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+@media screen and (-webkit-min-device-pixel-ratio:0)
+  and (min-resolution:.001dpcm) {
+    #google {
+      visibility: hidden;
+      height: 0;
+    }
+}
+
+@media not all and (min-resolution:.001dpcm) { @media {
+    #google {
+      visibility: hidden;
+      height: 0;
+    }
+}}
+    </style>
     <title>name.</title>
     <link rel="stylesheet" href="indestructibletype-fonthosting.github.io/fakehelvetica.css" type="text/css" charset="utf-8" />
 </head>
@@ -15,7 +31,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
-<div style="font-family: Helvetica, Arial, sans-serif; display: inline-block;">The Book of</div><div id="google change" style="overflow: hidden; margin-bottom: -13px; display: inline-block;"><div style="margin-left: -133px; margin-right: -53px; margin-top: -10px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></div>
+<div style="font-family: Helvetica, Arial, sans-serif; display: inline-block;">The Book of</div><div id="google" style="overflow: hidden; margin-bottom: -13px; display: inline-block;"><div style="margin-left: -133px; margin-right: -53px; margin-top: -10px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></div>
 </span>
 </body>
 </html>
