--- a/fb.html
+++ b/fb.html
@@ -5,15 +5,13 @@
 @media screen and (-webkit-min-device-pixel-ratio:0)
   and (min-resolution:.001dpcm) {
     #google {
-      visibility: hidden;
-      height: 0;
+      margin-bottom: -15px;
     }
 }
 
 @media not all and (min-resolution:.001dpcm) { @media {
     #google {
-      visibility: hidden;
-      height: 0;
+      margin-bottom: -15px;
     }
 }}
     </style>
