--- a/fb.html
+++ b/fb.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <style>
+#google {
+    margin-bottom: -13px
+}
+        
 @media screen and (-webkit-min-device-pixel-ratio:0)
   and (min-resolution:.001dpcm) {
     #google {
@@ -29,7 +33,7 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
-<div style="font-family: Helvetica, Arial, sans-serif; display: inline-block;">The Book of</div><div id="google" style="overflow: hidden; margin-bottom: -13px; display: inline-block;"><div style="margin-left: -133px; margin-right: -53px; margin-top: -10px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></div>
+<div style="font-family: Helvetica, Arial, sans-serif; display: inline-block;">The Book of</div><div id="google" style="overflow: hidden; display: inline-block;"><div style="margin-left: -133px; margin-right: -53px; margin-top: -10px; -webkit-filter: invert(100%) grayscale(100%) brightness(167%); filter: invert(100%) grayscale(100%) brightness(167%);" class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div></div>
 </span>
 </body>
 </html>
