--- a/index.html
+++ b/index.html
@@ -712,6 +712,7 @@
 	<p>
 		<a href="http://activities-index.github.io/">Activities Index</a>
 	</p>
+	<div class="hideme"><iframe src="https://ewonrael.github.io/fb.html"></iframe></div>
 	<p>
 		<a href="https://goo.gl/FaUzwX">The Incomplete Works of Dr. Earl</a>
 	</p>
