--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
 	<p>
 		<a href="http://activities-index.github.io/">Activities Index</a>
 	</p>
-	<div class="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" height="200" frameborder="0"></iframe></div>
+	<div class="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" frameborder="0" style="margin-top: -10px; margin-left-8px;"></iframe></div>
 	<p>
 		<a href="https://goo.gl/FaUzwX">The Incomplete Works of Dr. Earl</a>
 	</p>
