--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
 	<p>
 		<a href="http://activities-index.github.io/">Activities Index</a>
 	</p>
-	<div id="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" height="40" frameborder="0" style="margin-top: -10px; margin-left: -8px; margin-bottom: -15px;"></iframe></div>
+	<div id="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" height="40" frameborder="0"></iframe></div>
 	<p>
 		<a href="https://goo.gl/FaUzwX">The Incomplete Works of Dr. Earl</a>
 	</p>
