--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 	<title>Owen Earl Official Site</title>
 	<link rel="stylesheet" href="https://indestructibletype-fonthosting.github.io/renner.css" type="text/css" charset="utf-8" />
     	<link rel="stylesheet" href="style.css"/>
+	<svg class="defs-only">
+  	  <filter id="monochrome" color-interpolation-filters="sRGB"
+	          x="0" y="0" height="100%" width="100%">
+	    <feColorMatrix type="matrix"
+	      values="0.95 0 0 0 0.05 
+	              0.85 0 0 0 0.15  
+	              0.50 0 0 0 0.50 
+	              0    0 0 1 0" />
+	  </filter>
+	</svg>
   </head>
   <body>
 	<h1>Owen Earl</h1>
