--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 	<p>
 		<a href="http://activities-index.github.io/">Activities Index</a>
 	</p>
-	<div id="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" height="40" frameborder="0" style="opacity: 0.95;"></iframe></div>
+	<div id="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" height="40" frameborder="0" style="-webkit-filter: url(#monochrome); filter: url(#monochrome); opacity: 0.95;"></iframe></div>
 	<p>
 		<a href="https://goo.gl/FaUzwX">The Incomplete Works of Dr. Earl</a>
 	</p>
