--- a/index.html
+++ b/index.html
@@ -738,5 +738,15 @@
 	<p>
 		<b>Made with Love By Owen Earl</b>
 	</p>
+	<svg class="defs-only" style="height: 0;">
+  	  <filter id="monochrome" color-interpolation-filters="sRGB"
+	          x="0" y="0" height="100%" width="100%">
+	    <feColorMatrix type="matrix"
+	      values="1 0 0 0 0 
+	              0 1 0 0 0  
+	              0 0 1 3 0 
+	              0 0 0 1 0" />
+	  </filter>
+	</svg>
   </body>
 </html>
