--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
 	<p>
 		<b>Made with Love By Owen Earl</b>
 	</p>
-	<svg class="defs-only" style="height: 0; padding: 0; margin-top: -2em;">
+	<svg class="defs-only" style="margin-top: -2em; height: 0;">
   	  <filter id="monochrome" color-interpolation-filters="sRGB"
 	          x="0" y="0" height="100%" width="100%">
 	    <feColorMatrix type="matrix"
