--- a/index.html
+++ b/index.html
@@ -734,11 +734,7 @@
 	<p>
 		<a href="https://ewonrael.github.io/Zeros/story">Zeros</a>
 	</p>
-	<br><br>
-	<p>
-		<b>Made with Love By Owen Earl</b>
-	</p>
-	<svg class="defs-only" style="margin-top: -2em; height: 0;">
+	<svg class="defs-only" style="height: 0;">
   	  <filter id="monochrome" color-interpolation-filters="sRGB"
 	          x="0" y="0" height="100%" width="100%">
 	    <feColorMatrix type="matrix"
@@ -748,5 +744,8 @@
 	              0 0 0 1 0" />
 	  </filter>
 	</svg>
+	<p>
+		<b>Made with Love By Owen Earl</b>
+	</p>
   </body>
 </html>
