--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
 	              0 0 1 3 0 
 	              0 0 0 1 0" />
 	  </filter>
-	</svg><br>
+	</svg><br><br>
 	<p>
 		<b>Made with Love By Owen Earl</b>
 	</p>
