--- a/index.html
+++ b/index.html
@@ -11,6 +11,40 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "I miss you and I love you"
+		      "Peter Pan: hey Wendy don't ever grow up come with me <br>Wendy: okay <br>Peter Pan: I need you to mother like 30 boys for me"
+		      "nobody understands my Guinness"
+		      "that's what big jerky wants me to think"
+		      "&ldquo;I&rsquo;m so sorry I didn't appreciate what I had well it was here. I love you so much and without you it&rsquo;s like I can&rsquo;t breathe. I&rsquo;ll do more in the future to never take you for granted because now that you&rsquo;re gone I know what I&rsquo;m losing&rdquo; <br>-me when I get a stuffy nose"
+		      "I'll have you know that it takes me a lot of self restrain to not purposely text people incredibly bizarre things before claiming I got the number mixed up"
+		      "Step 1: ??? <br>Step 2: ??? <br>Step 3: Profit"
+		      "what's in your garage feels like kind of a loaded question"
+		      "I mourn the past and it's not even like I had that much fun"
+		      "oh mr. font boi"
+		      "it's not your belief I disagree with, it's the conviction with which you hold it"
+		      "people are too quick to pigeonhole themselves"
+		      "my cat could learn a lot from me"
+		      "yogurt"
+		      "why is it called &ldquo;wall street&rdquo;? <br>it can't be a wall and also a street?"
+		      "I'm standing in an art museum does that make me art?"
+		      "alien species feel the miss Universe pageant is rigged"
+		      "prey tell, why bog down the conceptual purity of mac and cheese?"
+		      "without boop there can be no beep"
+		      "I want to say two more things before I flee into the forest"
+		      "feel our exclusive Mongolian boar bristles"
+		      "I want to abolish lobster hierarchies"
+		      "I don't think the world hates you any more than anyone else, dude"
+		      "Costco"
+		      "I am as to metaphor cheese as metaphor cheese is to transitive crackers"
+		      "Evil zinc ray or something-inator. <b>Big Laundry.</b>"
+		      "Spiders are everywhere! Everywhere until I've had my morning coffee!"
+		      "you obviously don't know me, nobody does, and if they did I'd just deny it"
+		      "you can't spell subgenera without letters"
+		      "I've missed you"
+		      "aliens refuse to give us their technology because they know for a fact we will screw it up somehow"
+		      "the ultimate manifestation of communism will be realized when the proletariat is made to believe each person has spontaneously received $500"
+		      "what if I'm a figment of your imagination and so is the whole world"
+		      "I had a dream about you"
 		      "you know there's no solution to a postmodern crisis",
 		      "there's no proof Hawaii exists",
 		      "we're all just kids",
@@ -622,13 +656,13 @@
 		<b>Recent Activity</b>
 	</p>
 	<p>
+		<a href="http://indestructibletype.com/Renner.html">Renner* 3.0</a>
+	</p>
+	<p>
+		<a href="https://ewonrael.bandcamp.com/track/sacramento">Sacramento</a>
+	</p>
+	<p>
 		<a href="http://activities-index.github.io/">Activities Index</a>
-	</p>
-	<p>
-		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
-	</p>
-	<p>
-		<a href="https://ewonrael.github.io/18-03-29%20Aesthetic%20Response%20to%20Repetition%20in%20Unfamiliar%20Music.mp3">Aesthetic Responses to Repetition in Unfamiliar Music</a>
 	</p>
 	<br><br>
 	<p>
@@ -660,7 +694,7 @@
 		<b>Music</b>
 	</p>
 	<p>
-		<a href="https://ewonrael.bandcamp.com/">BandCamp (main site)</a>
+		<a href="https://ewonrael.bandcamp.com/music">BandCamp (main site)</a>
 	</p>
 	<p>
 		<a href="https://youtu.be/MBbgw_Qt9Ho">Canon in F# Major for Yodel Instructors</a>
@@ -697,10 +731,10 @@
 		<a href="http://indestructibletype.com/">indestructible type* (main site)</a>
 	</p>
 	<p>
-		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
+		<a href="http://indestructibletype.com/Besley">Besley*</a>
 	</p>
 	<p>
-		<a href="http://indestructibletype.com/Besley">Besley*</a>
+		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
 	</p>
 	<p>
 		<a href="http://indestructibletype.com/Renner">Renner*</a>
@@ -711,6 +745,9 @@
 	</p>
 	<p>
 		<a href="http://activities-index.github.io/">Activities Index</a>
+	</p>
+	<p>
+		<a href="https://www.youtube.com/watch?v=42o0ZpBYUdE&feature=youtu.be">Aesthetic Responses to Repetition in Unfamiliar Music</a>
 	</p>
 	<div id="hideme"><iframe src="https://ewonrael.github.io/fb.html" width="200" height="40" frameborder="0" style="-webkit-filter: url(#monochrome); filter: url(#monochrome); opacity: 0.95;"></iframe></div>
 	<p>
